# --
# Changes of OTRS
# Copyright (C) 2001-2005 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.209.2.18 2005-12-30 15:54:04 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
2.0.5 (2005/??/??)
 - (2005/12/29) fixed "enter" submit bug in sysconfig (e. g. reset first
    item in the edit site)
 - (2005/12/29) fixed ArticleAttachmentIndex() - wrong index count in
    fs lookup - attachment icons sometimes not shown
 - (2005/12/29) added added missing class="button" in submit type="submit"
    of .dtl templates
 - (2005/12/27) fixed default note-type and default state-type in ticket
    pending mask
 - (2005/12/23) fixed stats/graph error message 'Can't call method "png"
     on an undefined value at ...'
 - (2005/12/21) fixed missing delete on time_accounting in
    Kernel/System/Ticket/Article.pm if article got deleted
 - (2005/12/20) improved die if xml is invalid in Kernel/System/XML.pm
 - (2005/12/12) added compat config option for compose answer to
    replace original sender with current customers email address
 - (2005/11/19) updated French language file, thanks to Yann Richard
 - (2005/12/04) fixed bug #1025 - ORA-01400: cannot insert NULL into ("OTRS"
    ."CUSTOMER_USER"."COMMENTS"
 - (2005/12/04) fixed bug #1018 - initial_insert.sql, oracle error ORA-01400:
    cannot insert NULL into
 - (2005/12/03) fixed std attachment feature (no attachment after
    additional fiel upload) in agent ticket compose
 - (2005/12/01) improved database Quote() for integer, also allow +|-
    in integer
 - (2005/11/30) fixed order of create attributes (TicketCreate(), TicketFreeTime(),
    TicketFreeTime(), ArticleCreate(), ...) on customer ticket creation
 - (2005/11/29) fixed bug #1010 - ORA-00972 Identifier is too long for oracle